--- a/action.yml
+++ b/action.yml
@@ -67,7 +67,7 @@ runs:
         echo command="$command" >> $GITHUB_OUTPUT
 
     - name: Get PR info
-      if: ${{ inputs.pr }}
+      if: inputs.pr
       id: pr-info
       shell: bash
       run: |
@@ -88,7 +88,7 @@ runs:
       run: echo "run-url=https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> "$GITHUB_OUTPUT"
 
     - name: Post job start comment
-      if: ${{ inputs.pr || inputs.comment-id }}
+      if: inputs.pr || inputs.comment-id
       uses: peter-evans/create-or-update-comment@v4
       id: comment-start
       with:
@@ -102,7 +102,7 @@ runs:
           > [1]: ${{ steps.vars.outputs.run-url }}
 
     - name: Checkout PR
-      if: ${{ inputs.pr }}
+      if: inputs.pr
       uses: actions/checkout@v4
       with:
         ref: ${{ steps.pr-info.outputs.branch }}
@@ -110,7 +110,7 @@ runs:
         token: ${{ inputs.github-token }}
 
     - name: Checkout default branch (no existing PR)
-      if: ${{ ! inputs.pr }}
+      if: "! inputs.pr"
       uses: actions/checkout@v4
       with:
         repository: ${{ steps.pr-info.outputs.repo }}
@@ -142,14 +142,20 @@ runs:
     - name: Auto commit changes
       id: auto-commit
       uses: stefanzweifel/git-auto-commit-action@v5
-      if: inputs.pr && github.ref != 'refs/heads/master'
+      if: >
+        inputs.no-commit != 'true'
+        && inputs.pr
+        && github.ref != 'refs/heads/master'
+        && github.ref != 'refs/heads/main'
       with:
         commit_message: "Auto-committed changes from Poe command `${{ steps.resolve-command.outputs.command }}`"
         commit_user_name: Octavia Squidington III
         commit_user_email: octavia-squidington-iii@users.noreply.github.com
 
     - name: Append success comment
-      if: steps.comment-start.outputs.comment-id && steps.auto-commit.outputs.changes_detected == 'true'
+      if: >
+        steps.comment-start.outputs.comment-id
+        && steps.auto-commit.outputs.changes_detected == 'true'
       uses: peter-evans/create-or-update-comment@v4
       with:
         comment-id: ${{ steps.comment-start.outputs.comment-id }}
@@ -158,7 +164,9 @@ runs:
           ✅ Poe command `${{ steps.resolve-command.outputs.command }}` completed successfully.
 
     - name: Append no-op comment
-      if: steps.comment-start.outputs.comment-id && steps.auto-commit.outputs.changes_detected != 'true'
+      if: >
+        steps.comment-start.outputs.comment-id
+        && steps.auto-commit.outputs.changes_detected != 'true'
       uses: peter-evans/create-or-update-comment@v4
       with:
         comment-id: ${{ steps.comment-start.outputs.comment-id }}
@@ -178,7 +186,9 @@ runs:
     # Create a new PR if no PR was provided
 
     - name: Create Pull Request
-      if: ${{ ! inputs.pr }}
+      if: >
+        inputs.no-commit != 'true'
+        && ! inputs.pr
       id: create-pr
       uses: peter-evans/create-pull-request@v7
       with:
@@ -201,7 +211,11 @@ runs:
         token: ${{ inputs.github-token }}
 
     - name: Append PR link to comment
-      if: ${{ steps.comment-start.outputs.comment-id && ! inputs.pr && steps.create-pr.outputs.pull-request-url }}
+      if: >
+        steps.comment-start.outputs.comment-id
+        && inputs.no-commit != 'true'
+        && ! inputs.pr
+        && steps.create-pr.outputs.pull-request-url
       uses: peter-evans/create-or-update-comment@v4
       with:
         comment-id: ${{ steps.comment-start.outputs.comment-id }}
