--- a/action.yml
+++ b/action.yml
@@ -132,7 +132,7 @@ runs:
       uses: astral-sh/setup-uv@v5
       with:
         # Set up the provided version or the latest if not specified
-        version: ${{ steps.tool-versions.outputs.uv | 'latest' }}
+        version: ${{ steps.tool-versions.outputs.uv || 'latest' }}
         # Use the provided Python version or the default one
         python-version: ${{ steps.tool-versions.outputs.python || '3.11' }}
 
@@ -161,7 +161,7 @@ runs:
       run: |
         echo "------------------------------------"
         echo "------------------------------------"
-        echo "-- Running Command: `poe ${{ steps.resolve-command.outputs.command }}` --"
+        echo "-- Running Command: 'poe ${{ steps.resolve-command.outputs.command }}' --"
         echo "------------------------------------"
         echo "------------------------------------"
 
@@ -176,7 +176,7 @@ runs:
       run: |
         echo "------------------------------------"
         echo "------------------------------------"
-        echo "-- Execution Completed: `poe ${{ steps.resolve-command.outputs.command }}` --"
+        echo "-- Execution Completed: 'poe ${{ steps.resolve-command.outputs.command }}' --"
         echo "------------------------------------"
         echo "------------------------------------"
 
