add custom messages support

--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,18 @@ inputs:
     description: "Disable auto-commit step"
     required: false
     default: "false"
+  start-message:
+    description: "Message to include in the start comment"
+    required: false
+    default: ""
+  success-message:
+    description: "Message to include in the success comment"
+    required: false
+    default: ""
+  failure-message:
+    description: "Message to include in the failure comment"
+    required: false
+    default: ""
 
 runs:
   using: "composite"
@@ -95,11 +107,9 @@ runs:
         comment-id: ${{ inputs.comment-id }}
         issue-number: ${{ inputs.pr }}
         body: |
-          > **Running `poe ${{ steps.resolve-command.outputs.command }}`...**
+          > ${{ inputs.start-message || ('**Running `poe' + steps.resolve-command.outputs.command + '`...**') }}
           >
-          > [Link to job logs.][1]
-          >
-          > [1]: ${{ steps.vars.outputs.run-url }}
+          > [Link to job logs.](${{ steps.vars.outputs.run-url }})
 
     - name: Checkout PR
       if: inputs.pr
@@ -202,18 +212,17 @@ runs:
         comment-id: ${{ steps.comment-start.outputs.comment-id }}
         reactions: hooray
         body: >
-          ✅ Poe command `${{ steps.resolve-command.outputs.command }}` completed successfully. (${{ steps.auto-commit.outputs.commit_hash }})
+          🤖 Auto-commit successful: ${{ steps.auto-commit.outputs.commit_hash }}
 
     - name: Append no-op comment
       if: >
         steps.comment-start.outputs.comment-id
-        && steps.auto-commit.outputs.changes_detected != 'true'
       uses: peter-evans/create-or-update-comment@v4
       with:
         comment-id: ${{ steps.comment-start.outputs.comment-id }}
         reactions: "+1"
-        body: >
-          🟦  Poe command `${{ steps.resolve-command.outputs.command }}` completed successfully.
+        body: |
+          ${{ inputs.success-message || (' 🟦  Poe command `' + steps.resolve-command.outputs.command + '` completed successfully.') }}
 
     - name: Append failure comment
       if: failure() && steps.comment-start.outputs.comment-id
@@ -222,7 +231,7 @@ runs:
         comment-id: ${{ steps.comment-start.outputs.comment-id }}
         reactions: confused
         body: >
-          ❌ Poe command `${{ steps.resolve-command.outputs.command }}` failed. Please inspect the logs.
+          ${{ inputs.failure-message || ('❌ Poe command `' + steps.resolve-command.outputs.command + '` failed. Please inspect the logs.') }}
 
     # Create a new PR if no PR was provided
 
